force-app/main/default/objects/Kargo_Numarasi__c/Kargo_Numarasi__c.object-meta.xml
<CustomObject>
    <label>Kargo Numarasi</label>
    <nameField>
        <displayFormat>K-{0000}</displayFormat>
        <label>Kargo Numarasi Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kargo Numaralari</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>