force-app/main/default/objects/Kargo_Numarasi__c/fields/Boy__c.field-meta.xml
<CustomField>
    <fullName>Boy__c</fullName>
    <label>Boy</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>