force-app/main/default/objects/Kargo_Numarasi__c/fields/En__c.field-meta.xml
<CustomField>
    <fullName>En__c</fullName>
    <label>En</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>