force-app/main/default/objects/Kargo_Numarasi__c/fields/Fiyati__c.field-meta.xml
<CustomField>
    <fullName>Fiyati__c</fullName>
    <label>Fiyati</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>