force-app/main/default/objects/Kargo_Numarasi__c/fields/Konteyner_Numarasi__c.field-meta.xml
<CustomField>
    <fullName>Konteyner_Numarasi__c</fullName>
    <label>Konteyner Numarasi</label>
    <referenceTo>Konteyner_Numarasi__c</referenceTo>
    <relationshipLabel>Kargo Numaralari</relationshipLabel>
    <relationshipName>Kargo_Numaralari</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>