force-app/main/default/objects/Kargo_Numarasi__c/fields/Musteri__c.field-meta.xml
<CustomField>
    <fullName>Musteri__c</fullName>
    <label>Musteri</label>
    <referenceTo>Musteri__c</referenceTo>
    <relationshipLabel>Kargo Numaralari</relationshipLabel>
    <relationshipName>Kargo_Numaralari</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>