force-app/main/default/objects/Kargo_Numarasi__c/fields/Yuksekl_k__c.field-meta.xml
<CustomField>
    <fullName>Yuksekl_k__c</fullName>
    <label>Yukseklık</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>