force-app/main/default/objects/Kargo_Numarasi__c/recordTypes/Denizyolu.recordType-meta.xml
<RecordType>
    <fullName>Denizyolu</fullName>
    <active>true</active>
    <label>Denizyolu</label>
</RecordType>