force-app/main/default/objects/Kargo_Numarasi__c/recordTypes/havayolu.recordType-meta.xml
<RecordType>
    <fullName>havayolu</fullName>
    <active>true</active>
    <label>havayolu</label>
</RecordType>