force-app/main/default/objects/Kargo_Numarasi__c/recordTypes/karayolu.recordType-meta.xml
<RecordType>
    <fullName>karayolu</fullName>
    <active>true</active>
    <label>karayolu</label>
</RecordType>