force-app/main/default/objects/Kargo_Numarasi__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agirlik__c</columns>
    <columns>Boy__c</columns>
    <columns>En__c</columns>
    <columns>Fiyati__c</columns>
    <columns>Yuksekl_k__c</columns>
    <columns>Musteri__c</columns>
    <columns>Konteyner_Numarasi__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>